--- a/cf/i18n/resources/ja-jp.untranslated.json
+++ b/cf/i18n/resources/ja-jp.untranslated.json
@@ -1172,10 +1172,6 @@
     "translation": "Error deleting user {{.Username}} \nMultiple users with that username returned. Please use 'cf curl' with specific origin instead."
   },
   {
-    "id": "Error getting spaces in organization.\n{{.APIErr}}",
-    "translation": ""
-  },
-  {
     "id": "Error parsing response",
     "translation": "Error parsing response"
   },
@@ -1344,6 +1340,10 @@
     "translation": "Org management:"
   },
   {
+    "id": "Organization '{{.Name}}' not found.",
+    "translation": ""
+  },
+  {
     "id": "Origin for mapping a user account to a user in an external identity provider",
     "translation": ""
   },
@@ -1442,6 +1442,10 @@
   {
     "id": "Set to port",
     "translation": "Set to port"
+  },
+  {
+    "id": "Space '{{.Name}}' not found.",
+    "translation": ""
   },
   {
     "id": "Space management:",
