set binary version, sha and build date from ldflags
- Default version changed from "BUILT_FROM_SOURCE-BUILT_AT_UNKNOWN_TIME"
to "0.0.0-unknown-version"
- Build date is separated with a '.' not a '-' because this is what the
semver library uses to separate out metadata.
- Config should be used to get version in actors/commands, not use
version.VersionString() directly. Old code uses version.VersionString()
because it has no access to config.

[finishes #133665239, #106234640]

Signed-off-by: Anand Gaitonde <agaitonde@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -6520,6 +6520,10 @@
     "translation": "{{.AppInstanceLimit}} - Grenzwert für App-Instanz"
   },
   {
+    "id": "{{.BinaryName}} version {{.VersionString}}",
+    "translation": ""
+  },
+  {
     "id": "{{.CFName}} api",
     "translation": "{{.CFName}}-API"
   },
