--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -6520,6 +6520,10 @@
     "translation": "{{.AppInstanceLimit}} comme nombre maximal d'instances d'application"
   },
   {
+    "id": "{{.BinaryName}} version {{.VersionString}}",
+    "translation": ""
+  },
+  {
     "id": "{{.CFName}} api",
     "translation": "API {{.CFName}}"
   },
