--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -6520,6 +6520,10 @@
     "translation": "Limite istanze applicazione {{.AppInstanceLimit}}"
   },
   {
+    "id": "{{.BinaryName}} version {{.VersionString}}",
+    "translation": ""
+  },
+  {
     "id": "{{.CFName}} api",
     "translation": "api {{.CFName}}"
   },
