--- a/cf/i18n/resources/pt-br.untranslated.json
+++ b/cf/i18n/resources/pt-br.untranslated.json
@@ -2056,6 +2056,10 @@
     "translation": "verbose and version flag"
   },
   {
+    "id": "{{.BinaryName}} version {{.VersionString}}",
+    "translation": ""
+  },
+  {
     "id": "{{.Message}}\nNote that this command requires CF API version 3.0.0+.",
     "translation": ""
   }
