--- a/cf/i18n/resources/zh-hant.untranslated.json
+++ b/cf/i18n/resources/zh-hant.untranslated.json
@@ -1960,6 +1960,10 @@
     "translation": "verbose and version flag"
   },
   {
+    "id": "{{.BinaryName}} version {{.VersionString}}",
+    "translation": ""
+  },
+  {
     "id": "{{.CFName}} api",
     "translation": "{{.CFName}} api"
   },
