--- a/cf/i18n/resources/ja-jp.untranslated.json
+++ b/cf/i18n/resources/ja-jp.untranslated.json
@@ -1912,6 +1912,10 @@
     "translation": "verbose and version flag"
   },
   {
+    "id": "{{.BinaryName}} version {{.VersionString}}",
+    "translation": ""
+  },
+  {
     "id": "{{.CFName}} api",
     "translation": "{{.CFName}} api"
   },
