--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -3056,6 +3056,10 @@
     "translation": "HEALTH_CHECK_TYPE"
   },
   {
+    "id": "HEALTH_CHECK_TYPE must be \"port\" or \"none\"",
+    "translation": ""
+  },
+  {
     "id": "HOST",
     "translation": "HOST"
   },
@@ -4820,12 +4824,8 @@
     "translation": "Set or view the targeted org or space"
   },
   {
-    "id": "Set to none",
-    "translation": "Set to none"
-  },
-  {
-    "id": "Set to port",
-    "translation": "Set to port"
+    "id": "Set to 'port' or 'none'",
+    "translation": ""
   },
   {
     "id": "Setting api endpoint to {{.Endpoint}}...",
