--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -3056,6 +3056,10 @@
     "translation": "TIPO_CONTROLLO_INTEGRITÀ"
   },
   {
+    "id": "HEALTH_CHECK_TYPE must be \"port\" or \"none\"",
+    "translation": ""
+  },
+  {
     "id": "HOST",
     "translation": ""
   },
@@ -4820,11 +4824,7 @@
     "translation": "Imposta o visualizza organizzazione o spazio di destinazione"
   },
   {
-    "id": "Set to none",
-    "translation": ""
-  },
-  {
-    "id": "Set to port",
+    "id": "Set to 'port' or 'none'",
     "translation": ""
   },
   {
