--- a/cf/i18n/resources/zh-hant.untranslated.json
+++ b/cf/i18n/resources/zh-hant.untranslated.json
@@ -1216,6 +1216,10 @@
     "translation": "HEALTH_CHECK_TYPE"
   },
   {
+    "id": "HEALTH_CHECK_TYPE must be \"port\" or \"none\"",
+    "translation": ""
+  },
+  {
     "id": "HOST",
     "translation": "HOST"
   },
@@ -1468,12 +1472,8 @@
     "translation": "Services integration:"
   },
   {
-    "id": "Set to none",
-    "translation": "Set to none"
-  },
-  {
-    "id": "Set to port",
-    "translation": "Set to port"
+    "id": "Set to 'port' or 'none'",
+    "translation": ""
   },
   {
     "id": "Space '{{.Name}}' not found.",
