--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -148,10 +148,6 @@
     "translation": "' is not a registered command. See 'cf help'"
   },
   {
-    "id": "'cf help -a' lists all commands with short descriptions. See 'cf help \u003ccommand\u003e' to read about a specific command.",
-    "translation": "'cf help -a' lists all commands with short descriptions. See 'cf help \u003ccommand\u003e' to read about a specific command."
-  },
-  {
     "id": "'routes' should be a list",
     "translation": "'routes' should be a list"
   },
@@ -4712,6 +4708,10 @@
     "translation": "Security group {{.security_group}} {{.error_message}}"
   },
   {
+    "id": "See 'cf help \u003ccommand\u003e' to read about a specific command.",
+    "translation": ""
+  },
+  {
     "id": "Select a space (or press enter to skip):",
     "translation": "Select a space (or press enter to skip):"
   },
@@ -5426,6 +5426,10 @@
   {
     "id": "There is an error performing request on '{{.RepoURL}}': {{.Error}}\n{{.Tip}}",
     "translation": "There is an error performing request on '{{.RepoURL}}': {{.Error}}\n{{.Tip}}"
+  },
+  {
+    "id": "These are commonly used commands. Use 'cf help -a' to see all, with descriptions.",
+    "translation": "These are commonly used commands. Use 'cf help -a' to see all, with descriptions."
   },
   {
     "id": "This command",
