--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -148,10 +148,6 @@
     "translation": "' n'est pas une commande enregistrée. Voir 'cf help'"
   },
   {
-    "id": "'cf help -a' lists all commands with short descriptions. See 'cf help \u003ccommand\u003e' to read about a specific command.",
-    "translation": ""
-  },
-  {
     "id": "'routes' should be a list",
     "translation": "routes doit être une liste"
   },
@@ -4712,6 +4708,10 @@
     "translation": "Groupe de sécurité {{.security_group}} {{.error_message}}"
   },
   {
+    "id": "See 'cf help \u003ccommand\u003e' to read about a specific command.",
+    "translation": ""
+  },
+  {
     "id": "Select a space (or press enter to skip):",
     "translation": "Sélectionnez un espace (ou appuyez sur Entrée pour ignorer) :"
   },
@@ -5426,6 +5426,10 @@
   {
     "id": "There is an error performing request on '{{.RepoURL}}': {{.Error}}\n{{.Tip}}",
     "translation": "Une erreur est survenue lors de l'envoi de la demande à '{{.RepoURL}}' : {{.Error}}\n{{.Tip}}"
+  },
+  {
+    "id": "These are commonly used commands. Use 'cf help -a' to see all, with descriptions.",
+    "translation": ""
   },
   {
     "id": "This command",
