--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -3616,10 +3616,6 @@
     "translation": "Abmelden..."
   },
   {
-    "id": "Loggregator endpoint missing from config file",
-    "translation": "Loggregator-Endpunkt fehlt in Konfigurationsdatei"
-  },
-  {
     "id": "Looking up '{{.filePath}}' from repository '{{.repoName}}'",
     "translation": "Im Repository '{{.repoName}}' nach '{{.filePath}}' suchen"
   },
@@ -3778,6 +3774,10 @@
   {
     "id": "No domains found",
     "translation": "Keine Domänen gefunden"
+  },
+  {
+    "id": "No doppler loggregator endpoint found. Cannot retrieve logs.",
+    "translation": "Loggregator-Endpunkt fehlt in Konfigurationsdatei"
   },
   {
     "id": "No events for app {{.AppName}}",
