--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -3616,10 +3616,6 @@
     "translation": "Déconnexion..."
   },
   {
-    "id": "Loggregator endpoint missing from config file",
-    "translation": "Noeud final Loggregator manquant dans le fichier de configuration"
-  },
-  {
     "id": "Looking up '{{.filePath}}' from repository '{{.repoName}}'",
     "translation": "Recherche de '{{.filePath}}' dans le référentiel '{{.repoName}}'"
   },
@@ -3778,6 +3774,10 @@
   {
     "id": "No domains found",
     "translation": "Aucun domaine trouvé"
+  },
+  {
+    "id": "No doppler loggregator endpoint found. Cannot retrieve logs.",
+    "translation": "Noeud final Loggregator manquant dans le fichier de configuration"
   },
   {
     "id": "No events for app {{.AppName}}",
