--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -3616,10 +3616,6 @@
     "translation": "Disconnessione in corso..."
   },
   {
-    "id": "Loggregator endpoint missing from config file",
-    "translation": "Endpoint Loggregator mancante nel file di configurazione"
-  },
-  {
     "id": "Looking up '{{.filePath}}' from repository '{{.repoName}}'",
     "translation": "Ricerca di '{{.filePath}}' dal repository '{{.repoName}}'"
   },
@@ -3778,6 +3774,10 @@
   {
     "id": "No domains found",
     "translation": "Nessun dominio trovato"
+  },
+  {
+    "id": "No doppler loggregator endpoint found. Cannot retrieve logs.",
+    "translation": "Endpoint Loggregator mancante nel file di configurazione"
   },
   {
     "id": "No events for app {{.AppName}}",
