--- a/cf/i18n/resources/ko-kr.all.json
+++ b/cf/i18n/resources/ko-kr.all.json
@@ -3616,10 +3616,6 @@
     "translation": "로그아웃 중..."
   },
   {
-    "id": "Loggregator endpoint missing from config file",
-    "translation": "구성 파일에서 Loggregator 엔드포인트 누락"
-  },
-  {
     "id": "Looking up '{{.filePath}}' from repository '{{.repoName}}'",
     "translation": "'{{.repoName}}' 저장소에서 '{{.filePath}}' 검색"
   },
@@ -3778,6 +3774,10 @@
   {
     "id": "No domains found",
     "translation": "도메인을 찾을 수 없음"
+  },
+  {
+    "id": "No doppler loggregator endpoint found. Cannot retrieve logs.",
+    "translation": "구성 파일에서 Loggregator 엔드포인트 누락"
   },
   {
     "id": "No events for app {{.AppName}}",
