--- a/cf/i18n/resources/zh-hant.all.json
+++ b/cf/i18n/resources/zh-hant.all.json
@@ -3616,10 +3616,6 @@
     "translation": "正在登出..."
   },
   {
-    "id": "Loggregator endpoint missing from config file",
-    "translation": "配置檔中遺漏 Loggregator 端點"
-  },
-  {
     "id": "Looking up '{{.filePath}}' from repository '{{.repoName}}'",
     "translation": "正在從儲存庫 '{{.repoName}}' 中尋找 '{{.filePath}}'"
   },
@@ -3778,6 +3774,10 @@
   {
     "id": "No domains found",
     "translation": "找不到任何網域"
+  },
+  {
+    "id": "No doppler loggregator endpoint found. Cannot retrieve logs.",
+    "translation": "配置檔中遺漏 Loggregator 端點"
   },
   {
     "id": "No events for app {{.AppName}}",
